feat: Add blog archive and tag pages with dynamic content loading
- Implemented archives.html to display blog posts organized by year and month.
- Created tags.html for browsing articles by tags, including a dynamic tag cloud.
- Developed generate-posts.js to convert Markdown files to HTML pages.
- Added generate-sitemap.js for generating sitemap.xml for SEO.
- Introduced read-count.js to track local article read counts using localStorage.
- Updated package.json with necessary dependencies and scripts for building the site.
- Created robots.txt to allow search engines to index the site.
- Enhanced styles.css for improved UI/UX across the blog.

--- a/blog-editor.html
+++ b/blog-editor.html
@@ -27,6 +27,16 @@
             <input type="text" id="blog-title" name="title" placeholder="输入博客标题" required>
         </div>
 
+        <div class="form-group">
+            <label for="blog-description">文章描述</label>
+            <textarea id="blog-description" name="description" placeholder="输入文章描述(用于SEO和摘要)" required></textarea>
+        </div>
+
+        <div class="form-group">
+            <label for="blog-tags">标签</label>
+            <input type="text" id="blog-tags" name="tags" placeholder="用逗号分隔标签，如: 技术,教程,C++" required>
+        </div>
+
         <h2>编辑内容</h2>
         <p>使用Markdown格式编写您的内容。支持标题、链接、图片、代码块等。</p>
 
