feat: 更新博客路径为 '_posts'，调整相关文档和脚本

--- a/archives.html
+++ b/archives.html
@@ -145,7 +145,7 @@
             
             const repoOwner = 'tianjinsa';
             const repoName = 'tianjinsa.github.io';
-            const blogPath = 'blog';
+            const blogPath = '_posts';
             
             // 从GitHub获取博客文件列表
             fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/${blogPath}`)
