--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             
             const repoOwner = 'tianjinsa';
             const repoName = 'blog';
-            const blogPath = '__posts';
+            const blogPath = '_posts';
             
             // 存储所有博客文章和标签
             let allBlogPosts = [];
