--- a/tags.html
+++ b/tags.html
@@ -149,10 +149,9 @@
                     navbarLinksEl.classList.toggle('active');
                 });
             }
-            
-            const repoOwner = 'tianjinsa';
+              const repoOwner = 'tianjinsa';
             const repoName = 'tianjinsa.github.io';
-            const blogPath = 'blog';
+            const blogPath = '_posts';
             
             // 存储标签数据
             const tagData = {};
