feat: 添加全局配置系统，更新相关文档和脚本

--- a/blog-editor.html
+++ b/blog-editor.html
@@ -7,10 +7,11 @@
     <meta name="robots" content="noindex, nofollow">
     <title>博客编辑器 - Tianjinsa</title>
     <!-- 网站图标 -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📝</text></svg>">
-    <!-- 引入样式文件 -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📝</text></svg>">    <!-- 引入样式文件 -->
     <link rel="stylesheet" href="blog-editor.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- 引入全局配置文件 -->
+    <script src="js/config.js"></script>
 </head>
 <body>
         <!-- 编辑器界面 -->
