--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                     const blogFiles = files
                         .filter(file => file.name.endsWith('.md'))
                         .sort((a, b) => {
-                            // 假设文件名格式为: YYYY-MM-DD-title.md
-                            const dateA = a.name.substring(0, 10);
-                            const dateB = b.name.substring(0, 10);
+                            // 假设文件名格式为: YYYY-MM-DD-hh-mm-ss-title.md
+                            const dateA = a.name.substring(0, 19);
+                            const dateB = b.name.substring(0, 19);
                             return dateB.localeCompare(dateA); // 降序排列
                         });
                     
@@ -134,9 +134,8 @@
                             .then(response => response.text())
                             .then(content => {
                                 // 解析frontmatter和内容
-                                const frontmatterMatch = content.match(/^---\n([\s\S]*?)\n---\n/);
-                                let title = file.name.replace(/^\d{4}-\d{2}-\d{2}-/, '').replace('.md', '');
-                                let date = file.name.substring(0, 10);
+                                const frontmatterMatch = content.match(/^---\n([\s\S]*?)\n---\n/);                                let title = file.name.replace(/^\d{4}-\d{2}-\d{2}-\d{2}-\d{2}-\d{2}-/, '').replace('.md', '');
+                                let date = file.name.substring(0, 19);
                                 let excerpt = '';
                                 let tags = [];                                
                                 if (frontmatterMatch) {
