--- a/tags.html
+++ b/tags.html
@@ -149,8 +149,8 @@
                     navbarLinksEl.classList.toggle('active');
                 });
             }
-              const repoOwner = 'tianjinsa';
-            const repoName = 'tianjinsa.github.io';
+            const repoOwner = 'tianjinsa';
+            const repoName = 'blog';
             const blogPath = '_posts';
             
             // 存储标签数据
@@ -180,9 +180,8 @@
                             .then(response => response.text())
                             .then(content => {
                                 // 解析frontmatter和内容
-                                const frontmatterMatch = content.match(/^---\n([\s\S]*?)\n---\n/);
-                                let title = file.name.replace(/^\d{4}-\d{2}-\d{2}-/, '').replace('.md', '');
-                                let date = file.name.substring(0, 10);
+                                const frontmatterMatch = content.match(/^---\n([\s\S]*?)\n---\n/);                                let title = file.name.replace(/^\d{4}-\d{2}-\d{2}-\d{2}-\d{2}-\d{2}-/, '').replace('.md', '');
+                                let date = file.name.substring(0, 19);
                                 let tags = [];
                                 
                                 if (frontmatterMatch) {
