feat: Implement GitHub API utility for fetching repository content
- Added GitHubAPI class for interacting with GitHub API to retrieve repository contents, including methods for fetching file contents and directories.
- Included error handling for API requests and responses.
- Exported the GitHubAPI class for both browser and Node.js environments.

feat: Create client fallback setup script

- Developed setup-client-fallback.js to copy client HTML files to the root directory as a fallback for static page generation.
- Implemented file copying functionality with error handling.

feat: Local generation script for blog content

- Introduced local-generate.js to fetch blog files from GitHub and generate HTML pages locally.
- Integrated Markdown parsing and HTML generation with support for pagination, tags, and archives.
- Added sitemap generation for better SEO.

feat: Dynamic post loading in HTML template

- Created post.html template to dynamically load blog posts using GitHub API.
- Implemented front matter parsing and error handling for loading articles.
- Enhanced user experience with loading indicators and error messages.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 }
                                 
                                 // 创建博客链接页面地址，使用文件名作为链接
-                                const blogUrl = `./posts/${file.name.replace('.md', '.html')}`;
+                                const blogUrl = `post.html?file=${file.name}`;
                                 
                                 // 保存博客信息
                                 const postData = {
