--- a/tags.html
+++ b/tags.html
@@ -209,7 +209,7 @@
                                 }
                                 
                                 // 创建博客链接页面地址
-                                const blogUrl = `./posts/${file.name.replace('.md', '.html')}`;
+                                const blogUrl = `./post.html?file=${file.name}`;
                                 
                                 // 组织标签数据
                                 tags.forEach(tag => {
