--- a/archives.html
+++ b/archives.html
@@ -203,7 +203,7 @@
                                 }
                                 
                                 // 创建博客链接页面地址，使用文件名作为链接
-                                const blogUrl = `./posts/${file.name.replace('.md', '.html')}`;
+                                const blogUrl = `post.html?file=${file.name}`;
                                 
                                 // 解析日期
                                 const year = dateStr.substring(0, 4);
