--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://blog.tianjinsa.top//">
     <title>Tianjinsa的博客</title>
+    <!-- RSS订阅链接 -->
+    <link rel="alternate" type="application/rss+xml" title="Tianjinsa的博客 - RSS订阅" href="rss.html">
     <!-- 引入样式文件 -->
     <link rel="stylesheet" href="styles.css">
     <!-- 添加代码高亮 -->
@@ -31,6 +33,7 @@
             <li><a href="archives.html"><i class="bi bi-archive"></i> 归档</a></li>
             <li><a href="tags.html"><i class="bi bi-tags"></i> 标签</a></li>
             <li><a href="about.html"><i class="bi bi-person"></i> 关于</a></li>
+            <li><a href="rss.html"><i class="bi bi-rss"></i> RSS</a></li>
         </ul>
         <div class="navbar-toggle" id="navbar-toggle">
             <i class="bi bi-list"></i>
