--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div class="content-wrapper">
             <div class="blog-header">
                 <h1>Tianjinsa的博客</h1>
-                <p>分享技术文章和个人心得</p>            </div>
+                <p>分享技术文章和个人心得</p>
+                <p>&nbsp;</p>
+            </div>
             
             <!-- 搜索栏 -->
             <div class="search-container">
